// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Login component should render login component 1`] = `
<input
  class="form-control"
  id="loginInput"
  name="identifier"
  required=""
  type="text"
  value=""
/>
`;

exports[`Test Login component should render login component 2`] = `
<input
  class="form-control"
  id="passwordInput"
  name="password"
  required=""
  type="password"
  value=""
/>
`;
